--- a/src/app/dialog-create-new-message/dialog-create-new-message.component.html
+++ b/src/app/dialog-create-new-message/dialog-create-new-message.component.html
@@ -1,1 +1,34 @@
-<p>dialog-create-new-message works!</p>
+<div class="dialogContainer">
+    <div class="headline">
+        <h1 mat-dialog-title>Chat erstellen</h1>
+        <mat-icon (click)="onNoClick()">close</mat-icon>
+    </div>
+    <div mat-dialog-content>
+        <p>Füge Nutzer, mit denen du chatten willst, hinzu!</p>
+        <div class="subheadWrap">
+            <form class="example-form">
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Nutzer hinzufügen:</mat-label>
+                    <input type="text" matInput [formControl]="myControl2" [matAutocomplete]="auto">
+                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                            <img class="avatar" [src]="option.photoURL ? option.photoURL : avatar">
+                            {{option.displayName}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+                <button mat-button color="accent" (click)="addUser()">hinzufügen</button>
+            </form>
+            <table *ngIf="isUpdated">
+                <tr *ngFor="let user of userList">
+                    <div class="user">
+                        <img [src]=" user.photoURL ? user.photoURL : avatar" class="avatar">
+                        <span>{{ user.displayName }}</span>
+                    </div>
+                </tr>
+            </table>
+        </div>
+        <div class="buttonWrap"><button mat-button color="accent" [disabled]=""
+                (click)="createNewChat()">Erstellen</button></div>
+    </div>
+</div>
