--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,5 +1,5 @@
 <app-toolbar></app-toolbar>
-<div class="d-flex">
+<div class="d-flex div">
     <app-left-side></app-left-side>
     <app-channel></app-channel>
 </div>
