--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -7,7 +7,7 @@
     <div class="messageContainer">
         <app-message-card *ngFor="let message of messages" messageText="{{message}}"></app-message-card>
     </div>
-    <app-chatbox></app-chatbox>
+    <app-chatbox class="chatbox"></app-chatbox>
 </div>
 
 <!--
