--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(32, 31, 34);
-    max-height: 40px;
+    height: 40px;
     padding: 16px;
     border-bottom: 1px solid rgb(139, 139, 139);
 
