--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -12,7 +12,7 @@
     }
     .messageContainer {
         height: 67vh;
-        overflow: scroll;
+        overflow-y: scroll;
         max-height: fit-content;
         max-width: 100%;
     }
