--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -12,9 +12,9 @@
     }
     .messageContainer {
         height: 67vh;
-        overflow-y: scroll;
         max-height: fit-content;
-        max-width: 100%;
+        overflow-y: scroll;
+        width: calc(100vw - 224px);
     }
 
     .chatbox {
