--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -1,6 +1,7 @@
 mat-card {
     margin-top: 10px;
     margin-bottom: 10px;
+    width: calc(100vw - 280px);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
