--- a/src/app/dialog-big-picture/dialog-big-picture.component.html
+++ b/src/app/dialog-big-picture/dialog-big-picture.component.html
@@ -1,1 +1,9 @@
-<p>dialog-big-picture works!</p>
+<mat-dialog-content>
+    <div class="dialog-container">
+        <img src="{{ imagePath }}" class="image">
+        <button color="accent" mat-button (click)="dialogRef.close()">Close</button>
+    </div>
+
+    <!-- css muss noch angepasst werden, sobald der Rest steht 
+    evtl noch ein X anstelle von Close-->
+</mat-dialog-content>
