added editUser and changed design toolbar

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,8 +1,11 @@
 <div class="toolBar">
     <h2>Slack-clone</h2>
     <div class="d-flex user">
-        <h2>User</h2>
-        <button (click)="logout()">logout</button>
+        <img class="userPic" [src]="user.photoURL" [matMenuTriggerFor]="menu1">
+        <mat-menu #menu1="matMenu">
+            <button (click)="openDialog()" mat-menu-item>Edit</button>
+            <button (click)="logout()" mat-menu-item>Logout</button>
+        </mat-menu>
     </div>
 
 </div>
