--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -5,7 +5,7 @@
             <mat-icon>add</mat-icon>
         </button>
     </div>
-    <div class="channels">
+    <div class="personalUsers">
         
     </div>
 </div>
