--- a/src/app/dialog-add-members/dialog-add-members.component.html
+++ b/src/app/dialog-add-members/dialog-add-members.component.html
@@ -2,7 +2,7 @@
     <h3>Add Member(s)</h3>
     <div class="cursorPointer d-flex sb dialogAddMember" *ngFor="let users of comp.allMembers">
         {{ users.displayName }}
-        <button (click)="addPersonalUser()" mat-fab color="basic">
+        <button (click)="addPersonalMember()" mat-fab color="basic">
             <mat-icon>add</mat-icon>
         </button>
     </div>
