fixed loading messages

--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,7 +1,7 @@
 <div class="channelCont">
     <div class="channelHeader">
         Users in this channel:
-        <p *ngFor="let user of users">{{user}}, </p>
+        <p>{{ users.length }} </p>
         <!-- userid in username umwandeln fehlt noch -->
     </div>
     <div class="messageContainer" id="messageContainer">
