--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,1 +1,22 @@
-<p>dialog-edit-user works!</p>
+<mat-dialog-content>
+    <div class="dialog-container">
+        <h3>Ändere deinen Anzeigenamen:</h3>
+        <mat-form-field appearance="fill">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="{{ displayName }}" maxlength="80" [(ngModel)]="displayName">
+        </mat-form-field>
+        <h3>Ändere deinen Profilbild:</h3>
+        <div class="picture-wrap">
+            <label for="userPic" class="custom-file-upload">
+                <input type="file" id="userPic" single accept="*.jpg .png" (change)="uploadPicture($event)"
+                    (click)="deleteLastUpload()" placeholder="Upload a picture">
+                    <img src="{{ profileImagePath }}" class="image">
+            </label>
+        </div>
+        <div class="button-wrap">
+            <button *ngIf="uploaded" color="accent" mat-button
+                (click)="dialogRef.close(); saveEntry()">Speichern</button>
+            <button *ngIf="uploaded" color="accent" mat-button (click)="dialogRef.close(); deleteLastUpload()">Schließen</button>
+        </div>
+    </div>
+</mat-dialog-content>
