--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -9,5 +9,5 @@
 
         </div>
     </div>
-    <div class="threads">Antworten</div>
+    <div class="threads" (click)="toggleThread()">Antworten</div>
 </mat-card>
