--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -5,19 +5,24 @@
         <!-- userid in username umwandeln fehlt noch -->
     </div>
     <div class="messageContainer" id="messageContainer">
-        <app-message-card class="message" *ngFor="let message of messages" messageText="{{message}}"></app-message-card>
-    </div>
-    <app-chatbox class="chatbox"></app-chatbox>
-</div>
+        <div class="thread" *ngIf="thread">
+            <app-thread></app-thread>
+        </div>
+        <div class="channel" *ngIf="!thread">
+            <app-message-card class="message" *ngFor="let message of messages, let i = index" messageText="{{message}}" threadData="{{threadAnwsersToJson(i)}}"></app-message-card>
+        </div>
 
-<!--
+        <app-chatbox class="chatbox"></app-chatbox>
+    </div>
+
+    <!--
 
     all threads shown
     joshua
 -->
 
-<!-- <app-chatbox></app-chatbox> -->
-<!--
+    <!-- <app-chatbox></app-chatbox> -->
+    <!--
 
     path: 'main',
     component: MainContainerComponent,
