--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -1,7 +1,7 @@
-<p>thread works!</p>
-<!-- 
-
-    Answers for 
-
-    threads in channel
--->
+<div class="threadHeader">
+    User {{ threadData['creatorId']}} <br>
+    <div class="text" [innerHTML]="threadData['message']"></div>
+</div>
+<div class="threadAnwsers">
+    <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
+</div>
