thread works, without function

--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -13,7 +13,7 @@ André
 -->
 
 
-<mat-card>
+<mat-card [class.changeWidth]="messageService.thread">
     <quill-editor *ngIf="cleared" placeholder="Nachricht an" [modules]="modules"
         (onEditorChanged)="changedEditor($event)">
     </quill-editor>
