--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -2,4 +2,5 @@
 <div class="d-flex div">
     <app-left-side></app-left-side>
     <app-channel></app-channel>
+    <app-thread *ngIf="messageService.thread"></app-thread>
 </div>
