fixed create new message

--- a/src/app/channel-list/channel-list.component.html
+++ b/src/app/channel-list/channel-list.component.html
@@ -6,6 +6,7 @@
         </button>
     </div>
     <div class="channels">
-        <button class="channelButton cursorPointer" *ngFor="let channel of allChannels" (click)="changeSelectedId(channel.channelId)">{{ channel.channelName }}</button>
+        <button class="channelButton cursorPointer" *ngFor="let channel of filteredForUser"
+            (click)="changeSelectedId(channel.channelId)">{{ channel.channelName }}</button>
     </div>
 </div>
