--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .d-center {
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
 .cursorPointer {
