--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,7 +1,8 @@
 <div class="channelCont" [class.changeWidth]="messageService.thread">
-  <div class="channelHeader">
-    Users in this channel:
-    <p>{{ users.length }} </p>
+  <div class="channelHeader d-flex sb">
+
+    <p>Users in this channel: {{ users.length }} </p>
+    <mat-icon  (click)="openDialog()">info</mat-icon>
     <!-- userid in username umwandeln fehlt noch -->
   </div>
   <div class="messageContainer" id="messageContainer">
