--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -1,15 +1,17 @@
-<!-- <div class="threadHeader">
+<div class="threadCont column">
+
+    <div class="d-flex sb">
+        <h3>Thread</h3>
+        <button (click)="closeThread()" mat-fab color="basic">
+            <mat-icon>add</mat-icon>
+        </button>
+    </div>
+
     User {{ threadData['creatorId']}} <br>
     <div class="text" [innerHTML]="threadData['message']"></div>
-</div>
-<div class="threadAnwsers">
-    <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
-</div> -->
-<div class="threadCont d-flex sb">
 
-    <h3>thread works</h3>
-    <button (click)="closeThread()" mat-fab color="basic">
-        <mat-icon>add</mat-icon>
-    </button>
+    <div class="threadAnwsers">
+        <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
+    </div>
 
 </div>
