--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -3,26 +3,20 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(32, 31, 34);
-    height: 40px;
-    padding: 16px;
+    height: 60px;
     border-bottom: 1px solid rgb(139, 139, 139);
+    padding-left: 12px;
+    padding-right: 12px;
 
     h2 {
         color: white;
         margin: 0;
-        margin-right: 24px;
-    }
-
-    .user {
-        align-items: center;
-        justify-content: center;
-        margin-right: 24px;
     }
 
     .userPic {
         border-radius: 100%;
-        height: 48px;
-        width: 48px;
+        height: 40px;
+        width: 40px;
         object-fit: contain;
     }
 }
