--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,11 +1,12 @@
 <div class="membersCont">
+
     <div class="d-flex sb">
         <h3>Direktnachrichten</h3>
         <button (click)="openDialog()" mat-fab color="basic">
             <mat-icon>add</mat-icon>
         </button>
     </div>
-    <div class="personalUsers">
-        
-    </div>
+
+    <div class="personalUsers"></div>
+
 </div>
