delete edit in message-card

--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -4,9 +4,9 @@
 
     <div class="message">
         <div class="text" [innerHTML]="messageText"></div>
-        <button>
+        <!-- <button>                                                   zu kompliziert!
             <mat-icon>edit</mat-icon>
-        </button>
+        </button> -->
     </div>
 
     <div class="threads" (click)="toggleThread()">Antworten</div>
