add img to members

--- a/src/app/channel-list/channel-list.component.html
+++ b/src/app/channel-list/channel-list.component.html
@@ -8,8 +8,12 @@
     </div>
 
     <div class="channels">
-        <button class="channelButton cursorPointer" *ngFor="let channel of filteredForUser"
-            (click)="changeSelectedId(channel.channelId)">{{ channel.channelName }}</button>
+        <p 
+            class="channelButton cursorPointer" 
+            *ngFor="let channel of filteredForUser"
+            (click)="changeSelectedId(channel.channelId)">#
+            {{ channel.channelName }}
+        </p>
     </div>
     
 </div>
