--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,4 +1,4 @@
-<div class="channelListCont">
+<div class="memberListCont">
     <div class="membersCont">
         <div class="d-flex sb">
             <h3>Direktnachrichten</h3>
@@ -6,11 +6,15 @@
                 <mat-icon>add</mat-icon>
             </button>
         </div>
-        <div class="channels">
-            <button class="channelButton cursorPointer" *ngFor="let channel of filteredForUser"
-                (click)="changeSelectedId(channel.channelId)"><span *ngFor="let user of channel.users"> {{ user }}<span
-                        *ngIf="channel.users.length > 1 && user != channel.users[channel.users.length - 1]">,&nbsp;</span></span>
-            </button>
+        <div class="members column">
+            <div class="memberButton cursorPointer" *ngFor="let channel of filteredForUser"
+                (click)="changeSelectedId(channel.channelId)">
+                <img class="userPic" [src]="user.photoURL">
+                <span *ngFor="let user of channel.users"> {{ user }}
+                    <span *ngIf="channel.users.length > 1 && user != channel.users[channel.users.length - 1]">
+                        ,&nbsp;
+                    </span>
+                </span>
+            </div>
         </div>
-        <div class="personalUsers"></div>
     </div>
