--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -13,5 +13,5 @@
     <div class="threadAnwsers">
         <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
     </div>
-
+    <app-chatbox></app-chatbox>
 </div>
