--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,18 +1,17 @@
 <div class="channelCont" [class.changeWidth]="messageService.thread">
 
-  <div class="channelHeader d-flex sb">
-    <h3>{{ channelName }}</h3>
-    <div class="d-flex center">
-      <mat-icon (click)="openDialog()">info</mat-icon>
-      <!-- userid in username umwandeln fehlt noch -->
+    <div class="channelHeader d-flex sb">
+        <h3>{{ channelName }}</h3>
+        <div class="d-flex center">
+            <mat-icon (click)="openDialog()">info</mat-icon>
+            <!-- userid in username umwandeln fehlt noch -->
+        </div>
     </div>
-  </div>
 
-  <div class="messageContainer" id="messageContainer">
-    <app-message-card class="message" *ngFor="let message of messages, let i = index" messageText="{{message}}"
-      threadData="{{threadAnwsersToJson(i)}}"></app-message-card>
-    <app-chatbox class="chatbox"></app-chatbox>
-  </div>
+    <div class="messageContainer" id="messageContainer">
+        <app-message-card class="message" *ngFor="let message of messages, let i = index" messageText="{{message}}" threadData="{{threadAnwsersToJson(i)}}"></app-message-card>
+        <app-chatbox class="chatbox" [class.changeWidthChatbox]="messageService.thread"></app-chatbox>
+    </div>
 
 </div>
 
