--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -7,11 +7,11 @@
         </button>
     </div>
 
-    User {{ threadData['creatorId']}} <br>
+    <div> User {{ threadData['creatorId']}} </div>
     <div class="text" [innerHTML]="threadData['message']"></div>
 
     <div class="threadAnwsers">
         <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
     </div>
-    <app-chatbox></app-chatbox>
+    <app-chatbox [class.changeWidthChatbox]="messageService.thread"></app-chatbox>
 </div>
