--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -30,6 +30,10 @@
             transform: rotate(45deg);
         }
     }
+    .chatbox {
+        position: absolute;
+        bottom: 12px;
+    }
 }
 
 .changeWidthChatbox {
