--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -4,6 +4,8 @@ mat-card {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-top: 10px;
+    margin-bottom: 10px;
     .user {
         margin-bottom: 10px;
     }
