--- a/src/app/members/members.component.scss
+++ b/src/app/members/members.component.scss
@@ -1,4 +1,4 @@
-.memberListCont {
+.membersCont {
     height: 44vh;
     color: white;
 
@@ -21,9 +21,9 @@
         }
     }
 
-    .memberButton {
-        width: 100%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
+    // .memberButton {
+    //     width: 100%;
+    //     margin-top: 10px;
+    //     margin-bottom: 10px;
+    // }
 }
