--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -9,6 +9,6 @@
         </button> -->
     </div>
 
-    <div class="threads" (click)="toggleThread()">Antworten</div>
+    <p class="threads" (click)="toggleThread()">Antworten</p>
 
 </mat-card>
