--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -1,29 +1,34 @@
 .channelCont {
-    width: calc(100% - 24px);
+    width: 100%;
     background-color: rgb(27, 29, 33);
     padding: 12px;
     height: calc(100vh - 85px);
+
     .channelHeader {
         width: calc(100% - 24px);
         height: 40px;
         display: flex;
         color: white;
         border-bottom: 1px solid rgb(139, 139, 139);
+
         p {
             margin-top: 3px;
             margin-right: 16px;
         }
+
         mat-icon {
             color: white;
             cursor: pointer;
         }
     }
+
     .messageContainer {
         height: 67vh;
         max-height: fit-content;
         overflow-y: scroll;
         //width: calc(100vw - 224px - 400px);
     }
+    
     .chatbox {
         position: absolute;
         bottom: 12px;
