--- a/src/app/channel-list/channel-list.component.html
+++ b/src/app/channel-list/channel-list.component.html
@@ -1,6 +1,6 @@
 <div class="channelListCont">
 
-    <div class="d-flex sb">
+    <div class="header d-flex sb">
         <h3>Channels</h3>
         <button (click)="openDialog()" mat-fab color="basic">
             <mat-icon>add</mat-icon>
