--- a/src/app/channel-list/channel-list.component.scss
+++ b/src/app/channel-list/channel-list.component.scss
@@ -2,6 +2,13 @@
     height: 44vh;
     color: white;
 
+    .header {
+        height: 40px;
+        display: flex;
+        color: white;
+        border-bottom: 1px solid rgb(139, 139, 139);
+    }
+
     button {
         height: 28px;
         width: 28px;
@@ -11,6 +18,7 @@
     }
 
     .channels {
+        margin-top: 16px;
         max-height: 38vh;
         overflow-y: scroll;
     }
