--- a/src/app/message-card/message-card.component.html
+++ b/src/app/message-card/message-card.component.html
@@ -1,14 +1,15 @@
-<mat-card [class.changeWidth]="messageService.thread">
+<mat-card [class.changeWidth]="messageService.thread" class="d-flex mat-elevation-z0">
 
-    <div class="user">UserName/Profilbild</div>
+    <img class="messageCardImg" src="assets/avatar.png">
 
-    <div class="message">
-        <div class="text" [innerHTML]="messageText"></div>
-        <!-- <button>                                                   zu kompliziert!
-            <mat-icon>edit</mat-icon>
-        </button> -->
+    <div>
+        <div class="userName">UserName</div>
+
+        <div class="message">
+            <div class="text" [innerHTML]="messageText"></div>
+        </div>
+
+        <p class="threads" (click)="toggleThread()">Antworten</p>
     </div>
-
-    <p class="threads" (click)="toggleThread()">Antworten</p>
 
 </mat-card>
