--- a/src/app/message-card/message-card.component.scss
+++ b/src/app/message-card/message-card.component.scss
@@ -1,38 +1,30 @@
 mat-card {
-    width: calc(100% - 24px);
-    margin-top: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    
-    .user {
-        margin-bottom: 10px;
-    }
+    width: calc(100% - 40px);
+    padding: 8px;
+    margin-top: 16px;
+    background-color: transparent;
+    border: 0px solid;
 
-    .message {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        border: 1px solid rgba(0, 0, 0, 0.6);
-        padding: 5px;
-        background-color: grey;
-    }
-
-    button {
-        background-color: transparent;
-        border: none;
+    &:hover {
+        background-color: rgb(34, 37, 41);
     }
     
-    .threads {
-        margin-top: 10px;
-        margin-left: 20px;
-        font-size: 10px;
-        cursor: pointer;
+    .messageCardImg {
+        margin-right: 8px;
+        height: 36px;
+        width: 36px;
+    }
+
+    .userName {
+        font-weight: bold;
+    }
+
+    p {
+        margin: 0;
+        color: rgb(30, 155, 209);
     }
 }
 
 .changeWidth {
-    width: calc(100vw - 224px - 400px);
+    width: calc(100vw - 224px - 416px);
 }
