--- a/src/app/thread-anwser-card/thread-anwser-card.component.scss
+++ b/src/app/thread-anwser-card/thread-anwser-card.component.scss
@@ -1,4 +1,26 @@
 mat-card {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    width: calc(100% - 40px);
+    padding: 8px;
+    margin-top: 16px;
+    background-color: transparent;
+    border: 0px solid;
+
+    &:hover {
+        background-color: rgb(34, 37, 41);
+    }
+    
+    .messageCardImg {
+        margin-right: 8px;
+        height: 36px;
+        width: 36px;
+    }
+
+    .userName {
+        font-weight: bold;
+    }
+
+    p {
+        margin: 0;
+        color: rgb(30, 155, 209);
+    }
 }
