--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -1,17 +1,20 @@
 <div class="threadCont">
 
-    <div class="d-flex sb">
+    <div class="header d-flex sb">
         <h3>Thread</h3>
         <button (click)="closeThread()" mat-fab color="basic">
             <mat-icon>add</mat-icon>
         </button>
     </div>
 
-    <div> User {{ threadData['creatorId']}} </div>
+    <div class="userName"> User {{ threadData['creatorId']}} </div>
     <div class="text" [innerHTML]="threadData['message']"></div>
+    <p>Antworten:</p>
 
     <div class="threadAnwsers">
         <app-thread-anwser-card *ngFor="let anwser of anwsers" anwser="{{ anwser }}"></app-thread-anwser-card>
     </div>
+
     <app-chatbox class="chatbox" [class.changeWidthChatbox]="messageService.thread"></app-chatbox>
+
 </div>
