--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -20,16 +20,45 @@
     height: calc(100vh - 85px);
     border-left: 1px solid rgb(139, 139, 139);
     color: white;
-    button {
-        height: 28px;
-        width: 28px;
+
+    .header {
+        height: 40px;
         display: flex;
-        align-items: center;
-        justify-content: center;
-        mat-icon {
-            transform: rotate(45deg);
+        color: white;
+        border-bottom: 1px solid rgb(139, 139, 139);
+
+        button {
+            height: 28px;
+            width: 28px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            mat-icon {
+                transform: rotate(45deg);
+            }
         }
     }
+
+    .userName {
+        margin-top: 16px;
+        font-weight: bold;
+    }
+
+    .text {
+        border-bottom: 1px solid rgb(139, 139, 139);
+    }
+
+    p {
+        margin-top: 4px;
+        color:  rgb(139, 139, 139);
+    }
+
+    .threadAnwsers {
+        background-color: green;
+        width: 100%;
+        height: 55vh;
+    }
+
     .chatbox {
         position: absolute;
         bottom: 12px;
@@ -37,5 +66,5 @@
 }
 
 .changeWidthChatbox {
-    width: calc(100% - 8px);
+    width: calc(100% - 24px);
 }
