--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .d-flex {
-    display: flex;
+    display: flex !important;
 }
 
 .column {
